<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/edit_album_LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="tw.com.aochen.photoer.EditAlbum" >

    <ScrollView
        android:id="@+id/edit_album_scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <LinearLayout
            android:id="@+id/edit_album_LinearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <RelativeLayout
                    android:id="@+id/edit_album_coverLayout"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:clickable="true" >

                    <ImageView
                        android:id="@+id/edit_album_imageCover"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/cover" />

                    <LinearLayout
                        android:id="@+id/edit_album_layoutCover"
                        style="@style/NewAlbumTitleLayout"
                        android:layout_width="fill_parent"
                        android:layout_height="70dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:gravity="center" >

                        <TextView
                            android:id="@+id/edit_album_textCover"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/change_cover"
                            android:textColor="#255CAD"
                            android:textSize="20dp" />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="40dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/edit_album_textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_album_information"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/edit_album_view2"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@android:color/darker_gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center_vertical" >

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edit_album_editTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/my_edittext"
                    android:ems="10"
                    android:hint="@string/album_title_hint"
                    app:baseColor="#255CAD"
                    app:floatingLabel="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:gravity="right|center_vertical" >

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edit_album_editLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/my_edittext"
                    android:ems="10"
                    android:hint="@string/album_location_hint"
                    app:baseColor="#255CAD"
                    app:floatingLabel="normal" />

                <LinearLayout
                    android:id="@+id/edit_album_newalbum_location"
                    style="?android:attr/actionButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center" >

                    <ImageView
                        android:id="@+id/edit_album_imageView2"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_action_location_found" />

                    <TextView
                        android:id="@+id/edit_album_textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/album_mylocation"
                        android:textColor="#555"
                        android:textSize="20dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:gravity="right|center_vertical" >

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edit_album_editDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/my_edittext"
                    android:editable="false"
                    android:ems="10"
                    android:hint="@string/album_date_hint"
                    app:baseColor="#255CAD"
                    app:floatingLabel="normal" />

                <LinearLayout
                    android:id="@+id/edit_album_newalbum_Date"
                    style="?android:attr/actionButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center" >

                    <ImageView
                        android:id="@+id/edit_album_imageViewDate"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_action_go_to_today" />

                    <TextView
                        android:id="@+id/edit_album_textViewDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/album_mydate"
                        android:textColor="#555"
                        android:textSize="20dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="40dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/edit_album_textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_album_story"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/edit_album_view3"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@android:color/darker_gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center_vertical" >

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edit_album_editContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/my_edittext"
                    android:ems="10"
                    android:hint="@string/album_content_hint"
                    app:baseColor="#255CAD"
                    app:floatingLabel="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="40dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/edit_album_textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newalbum_title_choosephoto"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/edit_album_view4"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@android:color/darker_gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <tw.com.aochen.photoer.MyGridView
                    android:id="@+id/edit_album_gridChoose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:horizontalSpacing="15dp"
                    android:isScrollContainer="false"
                    android:numColumns="3"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="15dp" >
                </tw.com.aochen.photoer.MyGridView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center" >

        <LinearLayout
            android:id="@+id/edit_album_cancelButton"
            style="?android:attr/actionButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true" >

            <ImageView
                android:id="@+id/edit_album_imageView4"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:paddingRight="5dp"
                android:src="@drawable/ic_action_remove" />

            <TextView
                android:id="@+id/edit_album_textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/album_cancel"
                android:textColor="#555"
                android:textSize="15dp" />
        </LinearLayout>

        <View
            android:id="@+id/edit_album_view1"
            android:layout_width="1dp"
            android:layout_height="25dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:id="@+id/edit_album_addButton"
            style="?android:attr/actionButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center" >

            <ImageView
                android:id="@+id/edit_album_imageView3"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:paddingRight="5dp"
                android:src="@drawable/ic_action_accept" />

            <TextView
                android:id="@+id/edit_album_textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_album_savebutton"
                android:textColor="#555"
                android:textSize="15dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>