<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/alert_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" xmlns:app1="http://schemas.android.com/apk/res/tw.com.aochen.photoer">

    <LinearLayout
        android:id="@+id/alertDialogButton1"
        style="?android:attr/actionButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:gravity="center" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:background="@drawable/layout_round"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/alertDialogImage1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_edit" />
        </LinearLayout>

        <TextView
            android:id="@+id/alertDialogText1"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/alert_dialog_edit_button"
            android:textColor="#555"
            android:textSize="20dp" />
    </LinearLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:id="@+id/alertDialogButton2"
        style="?android:attr/actionButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:clickable="true" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:background="@drawable/layout_round"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/alertDialogImage2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_delete" />
        </LinearLayout>

        <TextView
            android:id="@+id/alertDialogText2"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/alert_dialog_delete_button"
            android:textColor="#555"
            android:textSize="20dp" />
    </LinearLayout>

    <View
        android:id="@+id/View2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:id="@+id/alertDialogButton3"
        style="?android:attr/actionButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:clickable="true" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:background="@drawable/layout_round"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/alertDialogImage3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_share" />
        </LinearLayout>

        <TextView
            android:id="@+id/alertDialogText3"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/alert_dialog_share_button"
            android:textColor="#555"
            android:textSize="20dp" />
    </LinearLayout>

</LinearLayout>